--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
                     <div class="col-md-3 col-xs-12">
                         <div class="footer-widget twitter-widget">
                             <h4>Twitter</h4>
-														Email: hello.twitter@gmail.com <br>
+														Email: hello.triyan@gmail.com <br>
 														Phone: +62 852 3030 8886
                         </div>
                     </div><!-- .col-md-3 -->
