--- a/single-project.html
+++ b/single-project.html
@@ -237,8 +237,8 @@
                     <div class="col-md-3 col-xs-12">
                         <div class="footer-widget twitter-widget">
                             <h4>Twitter</h4>
-														Email: somecompany@example.com <br>
-														Phone: +1 234 567 89 10
+														Email: hello.triyan@gmail.com <br>
+														Phone: +62 852 3030 8886
                         </div>
                     </div><!-- .col-md-3 -->
                     <!-- End Twitter Widget -->
@@ -263,7 +263,7 @@
                 <div class="copyright-section">
                     <div class="row">
                         <div class="col-md-6">
-                            <p>&copy; 2016 Karmo -  All Rights Reserved <a href="#">Tanislav Robert</a> </p>
+                            <p>&copy; 2017 Karmo -  All Rights Reserved <a href="https://github.com/triyanarief">Triyan AW</a> </p>
                         </div><!-- .col-md-6 -->
                     </div><!-- .row -->
                 </div>
