--- a/contact.html
+++ b/contact.html
@@ -108,9 +108,9 @@
                             <h4><span>Our mail and phone</span></h4>
                             <h3>Contacts</h3>
                             <p>
-                                <abbr title="Email">E:</abbr> mail@mail.com
+                                <abbr title="Email">E:</abbr> hello.triyan@gmail.com
                                 <br>
-                                <abbr title="Phone">P:</abbr> 123-456-7890
+                                <abbr title="Phone">P:</abbr> +62 852 3030 886
                             </p>
                         </div>
                     </div>
@@ -211,8 +211,8 @@
                     <div class="col-md-3 col-xs-12">
                         <div class="footer-widget twitter-widget">
                             <h4>Twitter</h4>
-														Email: somecompany@example.com <br>
-														Phone: +1 234 567 89 10
+														Email: hello.triyan@gmail.com <br>
+														Phone: +62 852 3030 8886
                         </div>
                     </div><!-- .col-md-3 -->
                     <!-- End Twitter Widget -->
@@ -237,7 +237,7 @@
                 <div class="copyright-section">
                     <div class="row">
                         <div class="col-md-6">
-                            <p>&copy; 2016 Karmo -  All Rights Reserved <a href="#">Tanislav Robert</a> </p>
+                            <p>&copy; 2017 Karmo -  All Rights Reserved <a href="https://github.com/triyanarief">Triyan AW</a> </p>
                         </div><!-- .col-md-6 -->
                     </div><!-- .row -->
                 </div>
